@@ -33,3 +33,4 @@ GSTLEARN_EXPORT void throw_exp(const std::string& msg = "",
 
 #define my_throw(msg) throw_exp(msg, __FILE__, __LINE__)
 
+#define my_throw_impossible(msg) throw_exp("This error should never happen. " + msg, __FILE__, __LINE__)
