@@ -55,8 +55,8 @@ GSTLEARN_EXPORT String toMatrix(const String& title,
                                 const VectorString& colnames,
                                 const VectorString& rownames,
                                 bool bycol,
-                                int ncols,
                                 int nrows,
+                                int ncols,
                                 const VectorDouble &tab,
                                 bool flagOverride = false,
                                 bool flagSkipZero = false);
@@ -64,8 +64,8 @@ GSTLEARN_EXPORT String toMatrix(const String& title,
                                 const VectorString& colnames,
                                 const VectorString& rownames,
                                 bool bycol,
-                                int ncols,
                                 int nrows,
+                                int ncols,
                                 const VectorInt &tab,
                                 bool flagOverride = false,
                                 bool flagSkipZero = false);
