@@ -561,8 +561,8 @@ String toMatrix(const String &title,
  * @param colnames     Names of the columns (optional)
  * @param rownames     Names of the rows (optional)
  * @param bycol        true if values as sorted by column; false otherwise
- * @param ncols        Number of columns
  * @param nrows        Number of rows
+ * @param ncols        Number of columns
  * @param tab          VectorDouble containing the values
  * @param flagOverride true to override printout limitations
  * @param flagSkipZero when true, skip the zero values (represented by a '.' as for sparse matrix)
@@ -571,8 +571,8 @@ String toMatrix(const String& title,
                 const VectorString& colnames,
                 const VectorString& rownames,
                 bool bycol,
-                int ncols,
                 int nrows,
+                int ncols,
                 const VectorDouble &tab,
                 bool flagOverride,
                 bool flagSkipZero)
@@ -654,8 +654,8 @@ String toMatrix(const String& title,
  * @param colnames     Names of the columns (optional)
  * @param rownames     Names of the rows (optional)
  * @param bycol        true if values as sorted by column; false otherwise
- * @param ncols        Number of columns
  * @param nrows        Number of rows
+ * @param ncols        Number of columns
  * @param tab          VectorInt containing the values
  * @param flagOverride true to override printout limitations
  * @param flagSkipZero when true, skip the zero values (represented by a '.' as for sparse matrix)
@@ -665,8 +665,8 @@ String toMatrix(const String& title,
                 const VectorString& colnames,
                 const VectorString& rownames,
                 bool bycol,
-                int ncols,
                 int nrows,
+                int ncols,
                 const VectorInt &tab,
                 bool flagOverride,
                 bool flagSkipZero)
